--- a/astrobee/config/localization/localization_manager.config
+++ b/astrobee/config/localization/localization_manager.config
@@ -110,10 +110,8 @@ pipelines = {
     needs_filter = true, optical_flow = true, timeout = 1.0, max_confidence = 0,
     enable_topic = "loc/ml/enable", enable_timeout = 20.0,
     reg_topic = "loc/ml/registration", reg_timeout = 30.0,
-    feat_topic = "loc/ml/features", feat_timeout = 600.0, feat_threshold = 3,
-    enable_topic2 = "loc/ar/enable", enable_timeout2 = 10.0,
-    reg_topic2 = "loc/ar/registration", reg_timeout2 = 3.0,
-    feat_topic2 = "loc/ar/features", feat_timeout2 = 1.0, feat_threshold2 = 3     },
+    feat_topic = "loc/ml/features", feat_timeout = 600.0, feat_threshold = 3
+   },
   -- AR Tags
   { id = "ar", name = "AR Tags", ekf_input = 1,
     needs_filter = true, optical_flow = true, timeout = 1.0, max_confidence = 0,
@@ -131,3 +129,7 @@ pipelines = {
   -- Ground truth
   { id = "gt", name = "Ground truth", ekf_input = 5                           }
 }
+
+    -- enable_topic2 = "loc/ar/enable", enable_timeout2 = 10.0,
+    -- reg_topic2 = "loc/ar/registration", reg_timeout2 = 3.0,
+    -- feat_topic2 = "loc/ar/features", feat_timeout2 = 1.0, feat_threshold2 = 3  
